.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
01:33:01 **** Incremental Build of configuration Debug for project LED_Flash_Example ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F103xB -DDEBUG -c -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "LED_Flash_Example.elf" @"objects.list"   -mcpu=cortex-m3 -T"G:\STM32_HAL_MODULES\Example\LED_Flash_Example\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="LED_Flash_Example.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: LED_Flash_Example.elf
 
arm-none-eabi-objdump -h -S  LED_Flash_Example.elf  > "LED_Flash_Example.list"
arm-none-eabi-objcopy  -O binary  LED_Flash_Example.elf  "LED_Flash_Example.bin"
arm-none-eabi-size   LED_Flash_Example.elf 
   text	   data	    bss	    dec	    hex	filename
   5396	    120	   1584	   7100	   1bbc	LED_Flash_Example.elf
Finished building: default.size.stdout
 
Finished building: LED_Flash_Example.bin
Finished building: LED_Flash_Example.list
 
 
01:34:00 **** Incremental Build of configuration Debug for project LED_Flash_Example ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F103xB -DDEBUG -c -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:96:12: error: 'SD' undeclared (first use in this function)
   while (1)SD
            ^~
../Core/Src/main.c:96:12: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:97:3: error: expected ';' before '{' token
   {
   ^
make: *** [Core/Src/subdir.mk:38: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.
01:34:08 **** Incremental Build of configuration Debug for project LED_Flash_Example ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F103xB -DDEBUG -c -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "LED_Flash_Example.elf" @"objects.list"   -mcpu=cortex-m3 -T"G:\STM32_HAL_MODULES\Example\LED_Flash_Example\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="LED_Flash_Example.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: LED_Flash_Example.elf
 
arm-none-eabi-objdump -h -S  LED_Flash_Example.elf  > "LED_Flash_Example.list"
arm-none-eabi-objcopy  -O binary  LED_Flash_Example.elf  "LED_Flash_Example.bin"
arm-none-eabi-size   LED_Flash_Example.elf 
   text	   data	    bss	    dec	    hex	filename
   5396	    120	   1584	   7100	   1bbc	LED_Flash_Example.elf
Finished building: default.size.stdout
 
Finished building: LED_Flash_Example.bin
Finished building: LED_Flash_Example.list
 
 
